# graphsight

./: .env.example  .gitignore  BETA.md  DEMO.md  README.md  api.py  docker-compose.yml  requirements.txt
archive/: altyou.html
archive/dashboard/: package-lock.json  package.json  tailwind.config.ts
archive/dashboard/app/: globals.css  layout.tsx  page.tsx
archive/dashboard/app/keys/: page.tsx
archive/dashboard/app/settings/: page.tsx
archive/dashboard/components/: fade-in.tsx  shell.tsx
archive/dashboard/components/keys/: key-manager.tsx
archive/landing/: index.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  api.py  auth.py  cache.py  database.py  lifecycle.py  mcp_server.py  models.py  pod_agent.py  ratelimit.py  registry.py  requirements.txt  storage.py
backend/backups/: memory_shopflow.lbug.bak
backend/middleware/: __init__.py  routing.py
backend/models/: __init__.py  control_plane.py  graph_store.py  history.py
backend/routers/: github_oauth.py  history.py  onboarding.py  webhooks.py
backend/scheduler/: __init__.py  placement.py
backend/scripts/: audit_data.py  benchmark.py  generate_dry_run_artifact.py  ingest.py  ingest_github.py  ingest_jira_api.py  ingest_kaggle_jira.py  profile_route.py  ratelimit_test.py  stress_graph.py  stress_test.py
backend/security/: __init__.py  vault.py
backend/tests/: test_compiler.py  test_e2e_serve.py  test_github_client.py  test_github_oauth.py  test_ingest_pipeline.py  test_onboarding.py  test_scheduler.py  test_vault.py  test_webhooks.py
backend/tracerag/: __init__.py  config.py  curation.py  db.py  extract.py  llm.py  router.py
backend/tracerag/integrations/: langchain.py
backend/worker/: __init__.py  celery_app.py  debounce.py  settings.py  tasks.py
backend/worker/ingestion/: __init__.py  compiler.py  github_client.py  pipeline.py
datasets/: 01-architecture-overview.md  02-payment-service.md  03-auth-layer.md  04-user-db.md  05-service-dependencies-and-runbook.md  entity-resolution-ground-truth.json  jira-incident-tickets.json
docs/: DEMO.md  TODO.md  intent.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: TraceDashboard.tsx  Wordmark.tsx
frontend/src/data/: mockTrace.ts
frontend/src/lib/: api.ts  authToken.ts  clerk.ts  entity.tsx  layout.ts  useSessionUser.ts
frontend/src/types/: trace.ts
graphsight/: MANIFEST.in  README.md  pyproject.toml
graphsight-langgraph/: LICENSE  README.md  pyproject.toml
graphsight-langgraph/example/: demo_agent.py
graphsight-langgraph/graphsight_langgraph/: __init__.py  github_ingest.py  mapper.py  schema.py  tracer.py
graphsight/graphsight/: __init__.py  cli.py  server.py
infra/postgres/: init.sql
scripts/: benchmark.py  ingest.py
tracerag/: __init__.py  config.py  curation.py  db.py  extract.py  router.py
tracerag/integrations/: __init__.py  langchain.py
(+60 files in other folders)
